# web-research-stack

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile.backend  LICENSE  README.md  docker-compose.production.yml  docker-compose.yml  pyproject.toml  test.md
.github/: BRANCH_PROTECTION.md  CODEOWNERS
.github/workflows/: ci.yml  pr-checks.yml
docs/: api.md  installation-tr.md  llm-tool-integration.md  production-deployment.md  user-guide.md
examples/providers/: README.md  anthropic_web_research.py  gemini_web_research.py  openai_web_research.py
ops/grafana/dashboards/: web-research-overview.json
ops/grafana/provisioning/dashboards/: dashboard.yml
ops/nginx/: Dockerfile  entrypoint.sh  nginx.conf
ops/prometheus/: alerts.yml  init.sh  prometheus.yml.tmpl
scripts/: common_utils.py  dependency_analyzer.py  evaluate_retrieval.py  rotate_local_secrets.py  smoke_test_deployment.py  stress_test.py  verify_all.py
tests/: conftest.py  test_api.py  test_config.py  test_duckduckgo_search.py  test_network_safety.py  test_redis_cache.py  test_research_agent.py  test_scrapers.py  test_stealth_headers.py
web-ui/: .dockerignore  .env.local.example  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
web-ui/app/: globals.css  layout.tsx  page.tsx
web-ui/app/api/ollama/models/: route.ts
web-ui/app/api/openai/models/: route.ts
web-ui/app/api/research/: route.ts
web-ui/app/api/research/stream/: route.ts
web-ui/app/components/: QueryInput.tsx  SettingsModal.tsx
web-ui/app/contexts/: LanguageProvider.tsx  ThemeProvider.tsx
web-ui/app/i18n/: en.ts  tr.ts
web-ui/types/: react-syntax-highlighter.d.ts
web_scraper/: __init__.py  ai_agent.py  api.py  api_models.py  api_runtime.py  async_scrapers.py  cli.py  config.py  content_safety.py  duckduckgo_search.py  google_search.py  network_safety.py  playwright_scrapers.py  redis_cache.py  research_agent.py  scrapers.py  stealth.py
web_scraper/research/: __init__.py  agent.py  citation_verifier.py  constants.py  llm_client.py  models.py  profile_collectors.py  prompts.py  ranking.py  retry_utils.py  text_utils.py  url_utils.py
