[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-scraper"
version = "1.1.0"
description = "A powerful web scraper with CLI and API support"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Senol Dogan", email = "senoldogan@users.noreply.github.com"}
]
keywords = ["web-scraping", "scraper", "http", "beautifulsoup", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.26.0",
    "curl_cffi>=0.7.3",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "defusedxml>=0.7.1",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "tqdm>=4.66.0",
    "pypdf>=5.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
]

playwright = [
    "playwright>=1.40.0",
    "playwright-stealth>=1.0.6",
]

redis = [
    "redis[hiredis]>=5.0.0",
]

[project.scripts]
web-scraper = "web_scraper.cli:main"

[project.urls]
Homepage = "https://github.com/senoldogann/web-research-stack"
Repository = "https://github.com/senoldogann/web-research-stack.git"
Issues = "https://github.com/senoldogann/web-research-stack/issues"
Documentation = "https://github.com/senoldogann/web-research-stack/tree/main/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["web_scraper*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function call in argument defaults
    "UP006", # Use `dict` instead of `Dict` (Keep 3.9 compatibility)
    "UP035", # Use `dict` instead of `Dict` (Keep 3.9 compatibility)
    "UP007", # Use `X | Y` (Keep 3.9 compatibility)
    "UP045", # Use `X | None` (Keep 3.9 compatibility)
    "FA100", # Missing `from __future__ import annotations` (Optional for 3.9)
]

[tool.coverage.run]
source = ["web_scraper"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 40
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
